# ubuntu-service-inspector

./: .gitignore  README.md  pyproject.toml  usi.py
inspector/: cli.py  errors.py  services.py
