[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ubuntu-service-inspector"
version = "0.1.0"
description = "A CLI tool to inspect systemd services"
authors = [{name = "Bhawna Kapoor"}]

dependencies = []

[project.scripts]
usi = "inspector.cli:cli_main"